Added json deserialization via cereal library

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,9 @@
 SHELL=/bin/bash
 PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig
 PC_LIBS=$(shell PKG_CONFIG_PATH=$(PKG_CONFIG_PATH) pkg-config --libs openscenegraph-osgViewer)
+DEP_INCLUDE=../deps/cereal/include
 CC=g++
+CFLAGS=-std=gnu++11
 
 all: ../fa
 
@@ -15,7 +17,7 @@ main.o: main.cpp
 	$(CC) $(CFLAGS) -c main.cpp
 
 mdlviewer.o: mdlviewer.cpp
-	$(CC) $(CFLAGS) -c mdlviewer.cpp
+	$(CC) $(CFLAGS) -I$(DEP_INCLUDE) -c mdlviewer.cpp
 	
 clean:
 	rm ../fa main.o
