mdlparser outputs correct LOD order, light billboard always face camera, splitting up code into modules to improve compile time

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ CFLAGS=-std=gnu++11 -ggdb -O0
 
 all: ../fa
 
-../mdlviewer: mdlviewer.o
+../mdlviewer: mdlviewer.o color.o frame.o geo.o group_geo.o image.o light.o lod_geo.o mesh_geo.o model_definition.o resource_base.o resource_manager.o texture_geo.o vector3.o
 	$(CC) -o../mdlviewer mdlviewer.o $(PC_LIBS)
 
 ../fa: main.o
@@ -16,7 +16,7 @@ all: ../fa
 main.o: main.cpp
 	$(CC) $(CFLAGS) -c main.cpp
 
-mdlviewer.o: mdlviewer.cpp
+*.o: *.cpp
 	$(CC) $(CFLAGS) -I$(DEP_INCLUDE) -c mdlviewer.cpp
 	
 clean:
