--- a/src/model/Makefile
+++ b/src/model/Makefile
@@ -1,4 +1,4 @@
-DEP_INCLUDE=../../deps/cereal/include
+DEP_INCLUDE+=-I../../deps/cereal/include
 CC=g++
 CFLAGS=-std=gnu++11 -ggdb -O0
 
@@ -6,4 +6,4 @@ sources = $(wildcard *.cpp)
 objects = $(sources:.cpp=.o)
 
 %.o: %.cpp
-	$(CC) $(CFLAGS) -I$(DEP_INCLUDE) -c $< -o $@
+	$(CC) $(CFLAGS) $(DEP_INCLUDE) -c $< -o $@
