IGC SO file builds, time to test

--- a/deps/alleg_src/igc/Makefile
+++ b/deps/alleg_src/igc/Makefile
@@ -1,11 +1,14 @@
 DEP_INCLUDE+=-I../ -I../utility/ -I../zlib/
 CC=g++
-CFLAGS=-std=gnu++11 -ggdb -O0
+CFLAGS=-std=gnu++11 -ggdb -O0 -fmax-errors=10 -fPIC
 
 sources = $(wildcard *.cpp)
 objects = $(sources:.cpp=.o)
 
 all: $(objects)
+
+igc.so: $(objects)
+	$(CC) -fPIC -shared -o $@ $^
 
 %.o: %.cpp
 	$(CC) $(CFLAGS) $(DEP_INCLUDE) -c $< -o $@
