Added licence from alleg source, dependency generation rules

--- a/deps/alleg_src/igc/Makefile
+++ b/deps/alleg_src/igc/Makefile
@@ -4,14 +4,23 @@ CFLAGS=-std=gnu++11 -ggdb -O0 -fmax-errors=10 -fPIC
 
 sources = $(wildcard *.cpp)
 objects = $(sources:.cpp=.o)
+depends = $(sources:.cpp=.d)
 
-all: $(objects)
+all: igc.so $(objects)
 
 igc.so: $(objects)
 	$(CC) -fPIC -shared -o $@ $^
 
+%.d: %.cpp
+	$(CC) $(CFLAGS) $(DEP_INCLUDE) -MM -o $@ $<
+
 %.o: %.cpp
 	$(CC) $(CFLAGS) $(DEP_INCLUDE) -c $< -o $@
 
+deps: $(depends)
+
+depclean:
+	rm *.d
+
 clean:
-	rm *.o
+	rm *.o *.so
