--- a/src/client/Makefile
+++ b/src/client/Makefile
@@ -1,11 +1,11 @@
-DEP_INCLUDE+=-I../../deps/alleg_src/ -I../../deps/alleg_src/zlib
+DEP_INCLUDE+=-I../../deps/alleg_src/ -I../../deps/alleg_src/zlib -I../ -I../../deps/cereal/include
 PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig
 PC_LIBS=$(shell PKG_CONFIG_PATH=$(PKG_CONFIG_PATH) pkg-config --libs openscenegraph-osgViewer)
 CC=g++
 CFLAGS=-std=gnu++11 -ggdb3 -O0 -fno-inline-small-functions -fmax-errors=10 -fPIC -Wall -Wno-unused-function
 
 sources = $(wildcard *.cpp)
-objects = $(sources:.cpp=.o)
+objects = $(sources:.cpp=.o) $(wildcard ../model/*.o)
 
 all: client
 
