--- a/src/model/Makefile
+++ b/src/model/Makefile
@@ -5,8 +5,10 @@ CFLAGS+=-std=gnu++11 -ggdb3 -O0 -fpic
 sources = $(wildcard *.cpp)
 objects = $(sources:.cpp=.o)
 
-libmodel.a: $(objects)
-	ar rvs $@ $^
+all: $(objects)
+
+#libmodel.a: $(objects)
+#	ar rvs $@ $^
 
 %.o: %.cpp
 	$(CC) $(CFLAGS) $(DEP_INCLUDE) -c $< -o $@
