--- a/src/client/Makefile
+++ b/src/client/Makefile
@@ -1,8 +1,9 @@
 DEP_INCLUDE+=-I../../deps/alleg_src/ -I../../deps/alleg_src/zlib -I../ -I../../deps/cereal/include
 PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig
-PC_LIBS=$(shell PKG_CONFIG_PATH=$(PKG_CONFIG_PATH) pkg-config --libs openscenegraph-osgViewer)
+PC_LIBS=$(shell PKG_CONFIG_PATH=$(PKG_CONFIG_PATH) pkg-config --libs openscenegraph-osgViewer sdl2)
+PC_CFLAGS=$(shell PKG_CONFIG_PATH=$(PKG_CONFIG_PATH) pkg-config --cflags openscenegraph-osgViewer sdl2)
 CC=g++
-CFLAGS=-std=gnu++11 -ggdb3 -O0 -fno-inline-small-functions -fmax-errors=10 -fPIC -Wall -Wno-unused-function -Werror
+CFLAGS+=-std=gnu++11 -ggdb3 -O0 -fno-inline-small-functions -fmax-errors=10 -fPIC -Wall -Wno-unused-function -Werror $(PC_CFLAGS)
 
 sources = $(wildcard *.cpp)
 objects = $(sources:.cpp=.o) $(wildcard ../model/*.o)
