Updated linux build to use -fvisibility=hidden

--- a/src/client/Makefile
+++ b/src/client/Makefile
@@ -3,7 +3,7 @@ PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig
 PC_LIBS=$(shell PKG_CONFIG_PATH=$(PKG_CONFIG_PATH) pkg-config --libs openscenegraph-osgViewer sdl2)
 PC_CFLAGS=$(shell PKG_CONFIG_PATH=$(PKG_CONFIG_PATH) pkg-config --cflags openscenegraph-osgViewer sdl2)
 CC=g++
-CFLAGS+=-std=gnu++11 -ggdb3 -O0 -fno-inline-small-functions -fmax-errors=10 -fPIC -Wall -Wno-unused-function -Werror $(PC_CFLAGS)
+CFLAGS+=-std=gnu++11 -ggdb3 -O0 -fvisibility=hidden -fno-inline-small-functions -fmax-errors=10 -fPIC -Wall -Wno-unused-function -Werror $(PC_CFLAGS)
 
 sources = $(wildcard *.cpp)
 objects = $(sources:.cpp=.o) $(wildcard ../model/*.o)
