--- a/vc2013/vc2013.vcxproj
+++ b/vc2013/vc2013.vcxproj
@@ -42,6 +42,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>C:\Users\Adrian\Documents\Visual Studio 2013\Projects\free-allegiance\src\client;C:\Users\Adrian\Documents\Visual Studio 2013\Projects\free-allegiance\src\;C:\Users\Adrian\Documents\Visual Studio 2013\Projects\osg\include;C:\Users\Adrian\Documents\Visual Studio 2013\Projects\alleg_core\zlib;C:\Users\Adrian\Documents\Visual Studio 2013\Projects\cereal\include;C:\Users\Adrian\Documents\Visual Studio 2013\Projects\alleg_core;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Adrian\Documents\Visual Studio 2013\Projects\osg\lib;C:\Users\Adrian\Documents\Visual Studio 2013\Projects\alleg_core\vc2013\alleg_core\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -58,6 +59,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>osgDB.lib;osg.lib;osgGA.lib;osgViewer.lib;alleg_core.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
