Testing makefile updates for auto dependency generation

--- a/src/model/Makefile
+++ b/src/model/Makefile
@@ -5,6 +5,14 @@ CFLAGS+=-std=gnu++11 -ggdb3 -O0 -fpic
 sources = $(wildcard *.cpp)
 objects = $(sources:.cpp=.o)
 
+%.d: %.cpp
+	@set -e; \
+	$(CC) $(CFLAGS) $(DEP_INCLUDE) -MM $< > $@.$$$$; \
+	sed 's,\($*\)\.o[ :]*,\1.o $@ : ,g' < $@.$$$$ > $@; \
+	rm -f $@.$$$$
+
+-include $(sources:.cpp=.d)
+
 all: $(objects)
 
 #libmodel.a: $(objects)
