--- a/src/model/Makefile
+++ b/src/model/Makefile
@@ -3,7 +3,7 @@ DEP_INCLUDE+=-I../../deps/cereal/include
 CFLAGS+=-std=gnu++11 -ggdb3 -O0 -fpic
 
 sources = $(wildcard *.cpp)
-objects = $(sources:.cpp=.o)
+#objects = $(sources:.cpp=.o)
 
 %.d: %.cpp
 	@set -e; \
@@ -11,15 +11,15 @@ objects = $(sources:.cpp=.o)
 	sed 's,\($*\)\.o[ :]*,\1.o $@ : ,g' < $@.$$$$ > $@; \
 	rm -f $@.$$$$
 
--include $(sources:.cpp=.d)
+#-include $(sources:.cpp=.d)
 
-all: $(objects)
+#all: $(objects)
 
 #libmodel.a: $(objects)
 #	ar rvs $@ $^
 
-%.o: %.cpp
-	$(CC) $(CFLAGS) $(DEP_INCLUDE) -c $< -o $@
+#%.o: %.cpp
+#	$(CC) $(CFLAGS) $(DEP_INCLUDE) -c $< -o $@
 
 clean:
-	rm *.o
+	rm *.o *.d
