Updated Makefiles for autodependency generation on both projects

--- a/src/client/Makefile
+++ b/src/client/Makefile
@@ -2,7 +2,10 @@ DEP_INCLUDE+=-I../../deps/alleg_src/ -I../../deps/alleg_src/zlib -I../ -I../../d
 PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig
 PC_LIBS=$(shell PKG_CONFIG_PATH=$(PKG_CONFIG_PATH) pkg-config --libs openscenegraph-osgViewer)
 PC_CFLAGS=$(shell PKG_CONFIG_PATH=$(PKG_CONFIG_PATH) pkg-config --cflags openscenegraph-osgViewer)
-CFLAGS+=-std=c++11 -ggdb -O0 -fvisibility=hidden -fno-inline-small-functions -fmax-errors=10 -fPIC -Wall -Wno-unused-function -Werror $(PC_CFLAGS)
+CFLAGS+=-std=gnu++11 -ggdb -O0 -fvisibility=hidden -fno-inline-small-functions -fmax-errors=10 -fPIC -Wall -Wno-unused-function -Werror $(PC_CFLAGS)
+CC=g++
+
+.SUFFIXES:
 
 sources = $(wildcard *.cpp) $(wildcard ../model/*.cpp)
 objects = $(sources:.cpp=.o)
@@ -13,7 +16,7 @@ install: client.bin
 	cp client.bin ../../
 
 clean:
-	rm client.bin *.o
+	rm client.bin *.o *.d
 	$(MAKE) -C ../model/ clean
 
 clean-all:
